--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,21 +1,58 @@
-name: Workflow for Codecov code-exercises
-on: [push, pull_request]
+  # This is a basic workflow to help you get started with Actions
+
+name: CI
+
+# Controls when the workflow will run
+on:
+  # Triggers the workflow on push or pull request events but only for the main branch
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 jobs:
-  run:
-    runs-on: ubuntu-latest
+  linter:
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: [3.10]
+        os: [ubuntu-latest]
+    runs-on: ${{ matrix.os }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
         with:
-          python-version: 3.10
-      - name: Install dependencies
+          python-version: ${{ matrix.python-version }}
+      - name: Install project
         run: make install
-      - name: Run tests and collect coverage
-        run: make tests
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v2
-        with:
-          fail_ci_if_error: true
-          token: ${{secrets.CODECOV_TOKEN}} # not required for public repos
+      - name: Run linter
+        run: make lint
+  
+  
+  codecov:
+    needs: linter
+      strategy:
+        fail-fast: false
+        matrix:
+          python-version: [3.10]
+          os: [ubuntu-latest]
+      runs-on: ${{matrix.os}}
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v2
+      -   name: Set up Python 3.10
+          uses: actions/setup-python@v2
+          with:
+            python-version: ${{ matrix.python-version }}
+        - name: Install dependencies
+          run: make install
+        - name: Run tests
+          run: make tests
+        - name: Upload coverage to Codecov
+          uses: codecov/codecov-action@v2
+          with:
+            fail_ci_if_error: true
+            token: ${{secrets.CODECOV_TOKEN}} # not required for public repos
