--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.10.x]
+        python-version: ["3.6", "3.7", "3.9", "3.10"]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -30,13 +30,13 @@ jobs:
         run: make install
       - name: Run linter
         run: make lint
-      
+
   tests_linux:
     needs: linter
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.10.x]
+        python-version: ["3.6", "3.7", "3.9", "3.10"]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -54,13 +54,12 @@ jobs:
           fail_ci_if_error: true
           token: ${{secrets.CODECOV_TOKEN}} # not required for public repos
 
-
   tests_mac:
     needs: linter
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.10.x]
+        python-version: ["3.6", "3.7", "3.9", "3.10"]
         os: [macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -78,7 +77,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.10.x]
+        python-version: ["3.6", "3.7", "3.9", "3.10"]
         os: [windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -90,5 +89,5 @@ jobs:
         run: pip install --user --upgrade pip
       - name: Install project
         run: pip install -e .[test]
-      - name: run tests
+      - name: Run tests
         run: pytest -s -vvvv -l --tb=long tests
